--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prettier": "2.8.4",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4"
   },
